--- a/frontend/vortasks/android/app/src/main/res/values/colors.xml
+++ b/frontend/vortasks/android/app/src/main/res/values/colors.xml
@@ -2,4 +2,5 @@
 <resources>
     <color name="custom_background">#0A163D</color>
     <color name="custom_background_dark">#000000</color>
+	<color name="ic_launcher_background">#02183f</color>
 </resources>
